<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TransLoc Widget</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Widget Demo</string>
    <string name="str_tv_widget">TransLoc Widget</string>
    <string name="select_agency">Select an Agency</string>
    <string name="select_route">Select a Route</string>
    <string name="select_stop">Select a Stop</string>
    <string name="help_dialog">If TransLoc is available for your transit agency and it is not listed in the dropdown. It may be the case that your agency has not opted-in to enable the TransLoc OpenAPI. Please contact your local transit agency and ask about enabling OpenAPI access for TransLoc to use this application. It could also be the case that the agency does not support arrival times. </string>
    <string name="error_no_data">No data connection. Please make sure your data connection is enabled and try again.</string>

    <string name="title_activity_widget_list">WidgetList</string>
    <string name="action_addWidget">Add Widget</string>
    <string name="title_activity_add_new_widget">AddNewWidgetActivity</string>
    <string name="title_activity_widget_configuration_popup">WidgetConfigurationPopupActivity</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="err_widget_not_found">Error: Widget not found</string>
    <string name="err_recreate">Recreate or remove widget</string>
    <string name="mins_away">mins away</string>
    <string name="remove">Remove</string>
    <string name="about">About</string>
    <string name="finish">Finish!</string>
    <string name="developer">Developer:</string>
    <string name="agency">Agency</string>
    <string name="route">Route</string>
    <string name="stop">Stop</string>
    <string name="test_mins">13</string>
    <string name="error">Error:</string>
    <string name="route_placeholder">Route Short Name</string>
    <string name="stop_placeholder">Stop Name</string>
    <string name="dev_name">Shyamal Patel</string>
    <string name="dev_twitter_handle">\@ShyamuP</string>
    <string name="route_stop_placeholder">Route and Stop Name</string>
    <string name="set_background_color_button_txt">Set Background Color</string>
    <string name="set_text_color_button_txt">Set Text Color</string>
    <string name="bus_data">Bus Data:</string>
    <string name="bus_data_provider">TransLoc OpenAPI</string>
    <string name="bus_data_provider_url">https://www.mashape.com/transloc/</string>
    <string name="disclaimer">Disclaimer:</string>
    <string name="disclaimer_txt">Bus data may not be 100% reliable</string>
    <string name="disclaimer_content">Some routes may show inaccurate or no arrival times at all.</string>
    <string name="contribute">Contribute:</string>
    <string name="open_source">Open-source</string>
    <string name="source_url">http://www.shyamalpatel.com/TransLoc-Android-Widget/</string>
    <string name="Edit">Edit Colors</string>
    <string name="About">About</string>
    <string name="dev_website">www.shyamalpatel.com</string>

</resources>

