<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="@dimen/widget_margin"
    android:clickable="false"
    android:id="@+id/rlWidgetLayoutTwo">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">

        <TextView
            android:id="@+id/tvRoute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="9sp"
            android:text="@string/route_placeholder"
            android:textColor="#000000"
            android:layout_below="@+id/tvRemainingTime"
            android:singleLine="true"
            android:layout_centerHorizontal="true" />

        <TextView
            android:id="@+id/tvRemainingTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/test_mins"
            android:textSize="40sp"
            android:textColor="#000000"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <TextView
            android:id="@+id/tvStop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="9sp"
            android:text="@string/stop_placeholder"
            android:textColor="#000000"
            android:layout_below="@+id/tvRoute"
            android:layout_centerHorizontal="true"
            android:singleLine="true"/>
    </RelativeLayout>

</RelativeLayout>