<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="@dimen/widget_margin"
    android:clickable="false"
    android:id="@+id/rlWidgetLayout"
    android:background="#000000">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">

        <TextView
            android:id="@+id/tvRoute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="10sp"
            android:text="@string/err_widget_not_found"
            android:textColor="#ffffff"
            android:layout_toRightOf="@+id/tvRemainingTime"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="5dp"/>

        <TextView
            android:id="@+id/tvRemainingTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="65sp"
            android:layout_alignParentStart="false"
            android:layout_alignParentEnd="false"
            android:textColor="#ffffff"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="5dp"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/tvStop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="10sp"
            android:text="@string/err_recreate"
            android:textColor="#ffffff"
            android:layout_below="@+id/tvRoute"
            android:layout_alignLeft="@+id/tvRoute"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mins_away"
            android:textSize="18sp"
            android:id="@+id/tvMins"
            android:layout_alignBaseline="@+id/tvRemainingTime"
            android:layout_alignBottom="@+id/tvRoute"
            android:layout_toRightOf="@+id/tvRemainingTime"
            android:layout_marginLeft="5dp"
            android:visibility="gone"/>
    </RelativeLayout>

</RelativeLayout>